<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/main_blue">


    <ImageView
        android:id="@+id/map_activity_report_button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:src="@drawable/vector_warning"
        android:contentDescription="@string/ghost_app_report_button"
        android:layout_margin="8dp"
        android:layout_weight="1"/>
    <ImageView
        android:id="@+id/map_activity_map_button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:src="@drawable/vector_map"
        android:contentDescription="@string/ghost_app_map_button"
        android:layout_margin="8dp"
        android:layout_weight="1"/>
    <ImageView
        android:id="@+id/map_activity_bestiary_button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:src="@drawable/vector_book"
        android:contentDescription="@string/ghost_app_bestiaire_button"
        android:layout_margin="8dp"
        android:layout_weight="1"/>
</LinearLayout>