<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewMdpActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_mdp_title"
        android:textSize="35sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linear_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_mdp_text_view"
            android:textSize="20sp"
            android:layout_gravity="start"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="20dp">
            <EditText
                android:id="@+id/new_mdp_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="mdp"
                android:background="@color/white"
                android:hint="@string/edit_text_new_mdp"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/button_grey"
                android:textSize="25sp" />
            <ImageView
                android:id="@+id/new_mdp_visibility_button1"
                android:contentDescription="@string/ghost_app_mdp_visibility_button"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:src="@drawable/line_icon"
                android:layout_gravity="end"
                />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_text_verif_new_mdp"
            android:textSize="20sp"
            android:layout_gravity="start"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <EditText
                android:id="@+id/verif_new_mdp_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="mdp"
                android:background="@color/white"
                android:hint="@string/edit_text_vrif_new_mdp"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/button_grey"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/new_mdp_visibility_button2"
                android:contentDescription="@string/ghost_app_mdp_visibility_button"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:src="@drawable/line_icon"
                android:layout_gravity="end"
                />
        </FrameLayout>

        <Button
            android:id="@+id/new_mdp_activity_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/reset_mdp_text_btn"
            android:backgroundTint="@color/button_grey"
            android:textColor="@color/white"
            android:textSize="25sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>