<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubscribeActivity"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="top">
        <ImageView
            android:id="@+id/subscribe_activity_back_arrow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/ghost_app_back_arrow"
            android:scaleY="1.0"
            android:scaleX="1.0"
            android:layout_weight="1"/>
        <ProgressBar
            android:id="@+id/subscribe_activity_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center"
            android:max="5"
            android:progress="1"
            android:progressTint="@color/button_blue"
            android:progressBackgroundTint="@color/button_grey"
            android:scaleY="2.0"
            android:scaleX="0.6"
            android:layout_weight="6"/>
        <TextView
            android:id="@+id/subscribe_activity_progress_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/subscribe_activity_step_text"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/subscribe_activity_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/subscribe_title"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_weight="1.5"/>

    <TextView
        android:id="@+id/subscribe_activity_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text=""
        android:textSize="20sp"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_weight="7"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/subscribe_activity_info_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/text_view_info_input"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/subscribe_activity_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="emailAddress"
            android:background="@color/edit_text_grey"
            android:hint="@string/edit_text_info_input"
            android:inputType="text"
            android:padding="13dp"
            android:textColor="@color/button_grey"
            android:textColorHint="@color/button_grey"
            android:textSize="20sp" />

            <Button
                android:id="@+id/subscribe_activity_next_step_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/button_blue"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:text="@string/button_next_step"
                android:textColor="@color/white"
                android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>