<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateReportActivity"
    android:orientation="vertical">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/header_container"
        android:name="com.example.ghostapp.fragments.HeaderDetailFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="13"
        android:fillViewport="true"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/colorBackground"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:fitsSystemWindows="true"
            android:windowSoftInputMode="adjustResize">

            <TextView
                android:id="@+id/update_report_activity_date_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Signalement du : 12/05/2024"
                android:textSize="25sp"
                android:padding="8dp"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/update_report_monster_type_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_type"
                android:textSize="20sp"
                android:padding="5dp"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp">

                <Spinner
                    android:id="@+id/update_report_activity_report_type_spinner"
                    style="@style/SpinnerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/report_types" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/update_report_address_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_address_title"
                android:textSize="20sp"
                android:padding="5dp"
                android:layout_marginTop="10dp"/>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                app:strokeColor="@color/black">

                <EditText
                    android:id="@+id/update_report_activity_address_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/report_address"
                    android:inputType="textPostalAddress"
                    android:padding="10dp"/>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp"
                    app:strokeColor="@color/black"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/update_report_activity_ville_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/report_city"
                        android:inputType="textPostalAddress"
                        android:padding="10dp"/>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp"
                    app:strokeColor="@color/black"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/update_report_activity_code_postal_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/report_code_postal"
                        android:inputType="textPostalAddress"
                        android:padding="10dp"/>

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <CheckedTextView
                android:id="@+id/update_report_activity_use_location_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_location"
                android:textSize="20sp"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:checked="false"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                />

            <TextView
                android:id="@+id/update_report_description_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_description"
                android:textSize="20sp"
                android:padding="5dp"
                android:layout_marginTop="10dp"/>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                app:strokeColor="@color/black">

                <EditText
                    android:id="@+id/update_report_activity_description_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:hint="@string/report_description_hint"
                    android:padding="10dp"
                    android:background="@null" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/activity_report_detail_photos_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/update_report_activity_photo_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                />

            <Button
                android:id="@+id/update_report_activity_submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_report"
                android:textColor="@color/white"
                android:backgroundTint="@color/button_grey"
                android:textSize="20sp"
                android:layout_margin="8dp"
                android:layout_marginTop="20dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>